# galua

./: .gitignore  .gitmodules  README.md  build.sh  cabal.project  lua.spec  stack.yaml
docs/: .gitignore  Makefile  talk.md
docs/overview-talk/: Build.hs  Makefile  talk.md
examples/: call_from_resume.lua  change.lua  cloader.lua  concat_overload_test.lua  coro.lua  coro_error.lua  coroerror.lua  define_global.lua  error.lua  generate_chunk.lua  helloworld.lua  immediate_yield.lua  multiret.lua  once.lua  preload_demo.lua  recursion.lua  scope.lua  simple_coroutine.lua  simple_error.lua  simple_return.lua  smaller.lua  tabletest.lua  vararg_stress.lua  varargs.lua  vfstring_test.c  yield.lua
examples/advanced/: Makefile  README  list  list.darwin  lua_code.lua  main.c  shared_lib.c
examples/bound_thread/: lua.lua  my_c_module.c
examples/c_module/: Makefile  example_c_module.c  test.lua
examples/coroutines/: Makefile  simple_coroutines  simple_coroutines.c  simple_coroutines_yieldk.c
examples/markov/: generators.lua  markov.lua
examples/perf/: funs.lua  loops.lua  loops1.lua  upvalues.lua
examples/start_in_c/: lua_from_c.c  simple.lua
galua/: MicroOpCode.hs  README  Setup.hs  galua.cabal
galua-analysis/: MicroOpCode.hs  galua-analysis.cabal
galua-analysis/src/Galua/Micro/: AST.hs  AnalyzeRefs.hs  Eval.hs  ExplicitRefs.hs  Monad.hs  Primitives.hs  Translate.hs
galua-analysis/src/Galua/Micro/Translate/: AnalyzeRefs.hs  ExplicitRefs.hs  Monad.hs
galua-analysis/src/Galua/Micro/Type/: Eval.hs  Filter.hs  Import.hs  Monad.hs  Pretty.hs  Primitives.hs  Value.hs
galua-c/: .gitignore  Makefile  build  galua-dbg.pc  galua.pc  lua_api.txt  main.c  mk_macos_shared.sh  newstate.c
galua-c/Lua.framework/Versions/A/Resources/: Info.plist
galua-c/lualibs/: Makefile
galua-c/lualibs/src/: lcompat.c  lmathlib.c
galua-dbg/: README  Setup.hs  core-html  galua-dbg.cabal
galua-dbg/cbits/: lua_capi_dbg.c
galua-dbg/src/: HexFloatFormat.hs
galua-dbg/src/Galua/: Debugger.hs
galua-dbg/src/Galua/Debugger/: Analysis.hs  CommandQueue.hs  Console.hs  EmbedDirectory.hs  Execute.hs  Exportable.hs  Infer.hs  NameHarness.hs  Options.hs  PrettySource.hs  ResolveName.hs  Server.hs  Source.hs  Specs.hs  StepMode.hs  Tree.hs  Trie.hs  Types.hs  ValuePath.hs  View.hs  WatchList.hs
galua-dbg/src/Galua/Debugger/View/: Analysis.hs  MicroCode.hs  Spec.hs  Utils.hs
galua-jit/: LICENSE  README  galua-jit.cabal
galua-jit/src/Galua/Micro/: AST.hs  Compile.hs  ExecEnv.hs  JIT.hs  OpcodeInterpreter.hs  Translate.hs  Translate.hs-boot
galua-jit/src/Galua/Micro/Translate/: AnalyzeRefs.hs  ComputeInputs.hs  ExplicitRefs.hs  InferTypes.hs  Monad.hs  RenumberTMP.hs  Specialize.hs
galua-jit/src/Galua/Micro/Type/: Eval.hs  Import.hs  Monad.hs  Pretty.hs  Primitives.hs  Value.hs
galua-rts/: README  Setup.hs  galua-rts.cabal
galua-rts/src/: CMath.hs
galua-rts/src/Galua/: CObjInfo.hs  Code.hs  Code.hs-boot  FunId.hs  FunValue.hs  Mach.hs  Mach.hs-boot  Value.hs  ValueType.hs
galua-rts/src/Galua/Util/: ByteString.hs  IOURef.hs  SmallVec.hs
galua-spec/: ChangeLog.md  README  Test.hs  galua-spec.cabal
galua-spec/examples/: love.spec  lua.spec
galua-spec/src/Galua/Spec/: AST.hs  CFG.hs  CheckLua.hs  Lua.hs  Parser.hs
galua-spec/src/Galua/Spec/Parser/: Grammar.y  Layout.hs  Lexer.hs  Lexer.x  Monad.hs
galua/cbits/: lua_capi.c
galua/include/: lua.h  luaconf.h
galua/src/: CMath.hs  Galua.hs  Process.hs
galua/src/Galua/: Arguments.hs  CApi.hsc  CArgs.hs  CObjInfo.hs  Cache.hs  CallIntoC.hs  Code.hs  Code.hs-boot  DlInfo.hsc  FunId.hs  FunValue.hs  ImportCode.hs  Loc.hs  LuaString.hs  Mach.hs  Mach.hs-boot  MachUtils.hs  NameResolution.hs  Number.hs  OpcodeInterpreter.hs  Overloading.hs  Pretty.hs  Reference.hs  SizedVector.hs  Stack.hs  Stepper.hs  Table.hs  Value.hs  Value.hs-boot  ValueType.hs
galua/src/Galua/CApi/: Types.hsc
galua/src/Galua/Micro/: AST.hs  AST.hs-boot  Compile.hs  Eval.hs  ExecEnv.hs  JIT.hs  OpcodeInterpreter.hs  Stepper.hs  Translate.hs  Translate.hs-boot
galua/src/Galua/Micro/Translate/: AnalyzeRefs.hs  ComputeInputs.hs  ExplicitRefs.hs  JoinBlocks.hs  Monad.hs  RenumberTMP.hs  Simplify.hs
galua/src/Galua/Micro/Type/: Eval.hs  Filter.hs  Monad.hs  Value.hs
galua/src/Galua/Names/: Eval.hs  Find.hs
galua/src/Galua/Util/: Cache.hs  IOVector.hs  Loc.hs  SizedVector.hs  SmallVec.hs  Stack.hs  String.hs  Table.hs  Weak.hs
lib/macho/: Main.hs  Setup.hs  macho.cabal
lib/macho/src/Data/: Macho.hs
lib/macho/tests/: Test.hs
logo/: Makefile
specs/: prims.lua  prop.lua
ui/: analysis.js  code.css  code.js  debugger.js  editExpression.js  index.html  init.js  micro-code.js  newindex.html  thread.js  values.js
ui/libs/materialize-icons/: style.css
ui/new/: code.css  code.js  debugger.js  index.html  init.js  popUpMenu.js  style.css  thread.js  values.js
ui/old/: AreaUI.js  areas.js  code.html  debugger.js  index.html  test.html  values.js
