name:                galua-analysis
version:             0.1
synopsis:            Static analysis for Lua code
description:         Static analysis for Lua code
license:             MIT
license-file:        LICENSE
author:              Iavor S. Diatchki
maintainer:          diatchk@galois.com
copyright:           2016 Galois, Inc.
category:            Language
build-type:          Custom
cabal-version:       >=1.10

custom-setup
  setup-depends: base, Cabal >= 1.24, filepath

library
  hs-source-dirs:      src
  exposed-modules:     Galua.Micro.AST
                       Galua.Micro.Monad
                       Galua.Micro.Translate
                       Galua.Micro.AnalyzeRefs
                       Galua.Micro.ExplicitRefs
                       Galua.Micro.Eval
                       Galua.Micro.Type.Value
                       Galua.Micro.Type.Monad
                       Galua.Micro.Type.Eval
                       Galua.Micro.Type.Pretty
                       Galua.Micro.Type.Primitives
                       Galua.Micro.Type.Filter
                       Galua.Micro.Type.Import

  build-depends:       base,
                       lua-bc,
                       galua,
                       monadLib,
                       containers,
                       vector,
                       pretty,
                       transformers,
                       bytestring
  default-language:    Haskell2010
  ghc-prof-options:    -fprof-auto-top


executable GaluaMicroTest
  main-is: MicroOpCode.hs
  build-depends:       base,
                       lua-bc,
                       galua,
                       galua-analysis,
                       vector,
                       containers,
                       bytestring,
                       pretty-show
  default-language:    Haskell2010

