name:                galua-dbg
version:             0.2
synopsis:            Lua bytecode debugger
description:         Lua bytecode debugger
license:             MIT
license-file:        LICENSE
author:              Iavor Diatchki & Eric Mertens
maintainer:          iavor.diatchki@gmail.com
copyright:           2015 Galois, Inc.
category:            Language
build-type:          Custom
cabal-version:       >=1.10

custom-setup
  setup-depends: base, Cabal, filepath

library
  default-language:    Haskell2010
  ghc-prof-options: -fprof-auto-top
  exposed-modules:  Galua.Debugger,
                    Galua.Debugger.Server,
                    Galua.Debugger.EmbedDirectory,
                    Galua.Debugger.Tree,
                    Galua.Debugger.View,
                    Galua.Debugger.View.Utils,
                    Galua.Debugger.PrettySource,
                    Galua.Debugger.Options,
                    Galua.Debugger.Trie,
                    Galua.Debugger.Console,
                    Galua.Debugger.View.Analysis


  build-depends:       lua-bc               >=0.1  && <0.2,
                       base                 >=4.8  && <4.9,
                       config-value         >= 0.4.0.1 && <0.5,
                       config-value-getopt  >= 0.1 && < 0.2,
                       template-haskell     >=2.10 && <2.11,
                       directory            >=1.2.2 && <1.3,
                       unordered-containers >=0.2.5.1 && <0.3,
                       clock                >=0.7 && <0.8,
                       vector,
                       bytestring,
                       text,
                       snap-core,
                       snap-server,
                       aeson,
                       containers,
                       language-lua,
                       transformers,
                       monadLib,
                       filepath,
                       galua,
                       galua-analysis


  hs-source-dirs:      src

  c-sources:           cbits/lua_capi_dbg.c

  cc-options:          -std=c99

  if os(linux)
    cc-options:        -DLUA_USE_LINUX
  if os(darwin)
    cc-options:        -DLUA_USE_MACOSX
