name:                galua-dbg
version:             0.2
synopsis:            Lua bytecode debugger
description:         Lua bytecode debugger
license:             MIT
license-file:        LICENSE
author:              Iavor Diatchki & Eric Mertens
maintainer:          iavor.diatchki@gmail.com
copyright:           2015 Galois, Inc.
category:            Language
build-type:          Custom
cabal-version:       >=1.10

custom-setup
  setup-depends: base, containers, Cabal, filepath, template-haskell

flag dump-core
  description: Dump HTML for the core generated vy GHC during compilation
  default:     False


library
  default-language:    Haskell2010
  ghc-prof-options: -fprof-auto-top
  ghc-options:      -Wall -O2

  exposed-modules:  Galua.Debugger,
                    Galua.Debugger.ValuePath,
                    Galua.Debugger.Source,
                    Galua.Debugger.WatchList,
                    Galua.Debugger.Specs,
                    Galua.Debugger.Exportable,
                    Galua.Debugger.StepMode,
                    Galua.Debugger.ResolveName,
                    Galua.Debugger.CommandQueue,
                    Galua.Debugger.Server,
                    Galua.Debugger.EmbedDirectory,
                    Galua.Debugger.View,
                    Galua.Debugger.View.Utils,
                    Galua.Debugger.PrettySource,
                    Galua.Debugger.Options,
                    Galua.Debugger.Trie,
                    Galua.Debugger.Console,
                    Galua.Debugger.View.Analysis,
                    Galua.Debugger.View.Spec,
                    Galua.Debugger.NameHarness

  other-modules:    HexFloatFormat

  build-depends:       lua-bc               >=0.1  && <0.2,
                       base                 >=4.8  && <4.10,
                       config-value         >=0.5 && <0.6,
                       config-value-getopt  >=0.1 && < 0.2,
                       template-haskell     >=2.10 && <2.12,
                       directory            >=1.2.2 && <1.4,
                       unordered-containers >=0.2.5.1 && <0.3,
                       clock                >=0.7 && <0.8,
                       stm,
                       vector,
                       bytestring,
                       text,
                       snap-core,
                       snap-server,
                       aeson,
                       containers,
                       language-lua,
                       transformers,
                       monadLib,
                       filepath,
                       galua,
                       galua-jit,
                       galua-rts,
                       galua-spec,
                       alex-tools,
                       pretty,
                       dump-core


  hs-source-dirs:      src

  c-sources:           cbits/lua_capi_dbg.c

  cc-options:          -std=c99

  if os(linux)
    cc-options:        -DLUA_USE_LINUX
  if os(darwin)
    cc-options:        -DLUA_USE_MACOSX

  if flag(dump-core)
    build-depends: dump-core
    ghc-options: -fplugin=DumpCore -fplugin-opt DumpCore:core-html

