name:                galua-spec
version:             0.1.0.0
synopsis:
description:
license:             ISC
license-file:        LICENSE
author:              Iavor S. Diatchki
maintainer:          iavor.diatchki@gmail.com
copyright:           Iavor S. Diatchki, 2016
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:
    Galua.Spec.AST,
    Galua.Spec.CheckLua,
    Galua.Spec.CFG,
    Galua.Spec.Parser,
    Galua.Spec.Parser.Lexer,
    Galua.Spec.Parser.Layout,
    Galua.Spec.Parser.Grammar,
    Galua.Spec.Parser.Monad

  build-depends:       base >=4.8 && <4.11,
                       alex-tools >=0.3 && <0.4,
                       array >=0.5 && <0.6,
                       language-lua >= 0.11,
                       text, pretty, containers, vector, monadLib, pretty-show
  ghc-options:         -Wall
  hs-source-dirs:      src
  build-tools:         alex, happy
  default-language:    Haskell2010

executable test-parse
  build-depends: base, galua-spec, text, pretty-show, language-lua
  main-is: Test.hs





