name:                galua
version:             0.2
synopsis:            Lua bytecode interpreter
description:         Lua bytecode interpreter
license:             MIT
license-file:        LICENSE
author:              Eric Mertens
maintainer:          emertens@galois.com
copyright:           2015 Galois, Inc.
category:            Language
build-type:          Custom
cabal-version:       >=1.10

custom-setup
  setup-depends: base, containers, Cabal, filepath, template-haskell

library
  ghc-prof-options: -fprof-auto-top
  ghc-options:      -Wall -O2
  exposed-modules:     Galua
                       Galua.Arguments
                       Galua.CallIntoC
                       Galua.DlInfo
                       Galua.OpcodeInterpreter
                       Galua.Mach
                       Galua.Number
                       Galua.Overloading
                       Galua.Reference
                       Galua.FunValue
                       Galua.ValueType
                       Galua.Value
                       Galua.LuaString
                       Galua.Stepper
                       Galua.CObjInfo

                       Galua.Micro.AST
                       Galua.Micro.Eval
                       Galua.Micro.Translate
                       Galua.Micro.Translate.Monad
                       Galua.Micro.Translate.AnalyzeRefs
                       Galua.Micro.Translate.ExplicitRefs
                       Galua.Micro.Translate.JoinBlocks

                       Galua.Names.Find
                       Galua.Names.Eval

                       Galua.Util.Cache
                       Galua.Util.Table
                       Galua.Util.Loc
                       Galua.Util.Stack
                       Galua.Util.SizedVector
                       Galua.Util.Weak

  other-modules:       CMath
                       Process
                       Galua.CApi

  other-extensions:    RecordWildCards

  -- We rely on internal details of hashtables, so we have a tight bound
  build-depends:       lua-bc               >=0.1  && <0.2,
                       stm                  >=2.4  && <2.5,
                       hashable             >= 1.2 && < 1.3,
                       hashtables           ==1.2.1.0,
                       base                 >=4.8  && <4.10,
                       containers           >=0.5  && <0.6,
                       vector               >=0.10 && <0.12,
                       bytestring           >=0.10 && <0.11,
                       text                 >=1.2  && <1.3,
                       transformers         >=0.4  && <0.6,
                       numeric-extras       >=0.1  && <0.2,
                       pretty               >=1.1  && <1.2,
                       process              >=1.2  && <1.5,
                       deepseq              >=1.4  && <1.5,
                       language-lua         >=0.11 && <0.12,
                       clock                >=0.7  && <0.8,
                       ghc-prim             >=0.5  && <0.6,
                       primitive            >=0.6  && <0.7,
                       alex-tools           >= 0.1.1.0

  if os(linux)
    build-depends:     process,
                       unix,
                       elf,
                       dwarf-tools

  hs-source-dirs:      src

  c-sources:           cbits/lua_capi.c
  includes:            lprefix.h
                       luaconf.h
                       lua.h


  -- cpp for Haskell CPP, cc for c sources
  if os(linux)
    cc-options:        -DLUA_USE_LINUX
    cpp-options:       -DLUA_USE_LINUX
  if os(darwin)
    cc-options:        -DLUA_USE_MACOSX
    cpp-options:       -DLUA_USE_MACOSX

  include-dirs:        include
  install-includes:    lprefix.h
                       luaconf.h
                       lua.h


  cc-options:          -std=c99 -g
  default-language:    Haskell2010

