name:                galua
version:             0.2
synopsis:            Lua bytecode interpreter
description:         Lua bytecode interpreter
license:             MIT
license-file:        LICENSE
author:              Eric Mertens
maintainer:          emertens@galois.com
copyright:           2015 Galois, Inc.
category:            Language
build-type:          Custom
cabal-version:       >=1.10

custom-setup
  setup-depends: base, containers, Cabal, filepath, template-haskell

flag dump-core
  description: Dump HTML for the core generated vy GHC during compilation
  default:     False

library
  ghc-prof-options: -fprof-auto-top
  ghc-options:      -Wall -O2
  exposed-modules:     Galua
                       Galua.Arguments
                       Galua.CallIntoC
                       Galua.OpcodeInterpreter
                       Galua.MachUtils
                       Galua.Overloading
                       Galua.Stepper
                       Galua.ImportCode

                       Galua.Micro.AST
                       Galua.Micro.ExecEnv
                       Galua.Micro.OpcodeInterpreter
                       Galua.Micro.Stepper
                       Galua.Micro.Translate
                       Galua.Micro.Translate.Monad
                       Galua.Micro.Translate.AnalyzeRefs
                       Galua.Micro.Translate.ExplicitRefs
                       Galua.Micro.Translate.Simplify
                       Galua.Micro.Translate.JoinBlocks
                       Galua.Micro.Translate.RenumberTMP

                       Galua.Micro.JIT
                       Galua.Micro.Compile

                       Galua.Names.Find
                       Galua.Names.Eval

  other-modules:       Process
                       Galua.CApi

  -- We rely on internal details of hashtables, so we have a tight bound
  build-depends:       lua-bc               >=0.1  && <0.2,
                       stm                  >=2.4  && <2.5,
                       hashable             >= 1.2 && < 1.3,
                       hashtables           ==1.2.1.0,
                       base                 >=4.8  && <4.10,
                       containers           >=0.5  && <0.6,
                       vector               >=0.10 && <0.13,
                       bytestring           >=0.10 && <0.11,
                       text                 >=1.2  && <1.3,
                       transformers         >=0.4  && <0.6,
                       numeric-extras       >=0.1  && <0.2,
                       pretty               >=1.1  && <1.2,
                       process              >=1.2  && <1.5,
                       deepseq              >=1.4  && <1.5,
                       language-lua         >=0.11 && <0.12,
                       ghc-prim             >=0.5  && <0.6,
                       primitive            >=0.6  && <0.7,
                       alex-tools           >= 0.1.1.0,
                       monadLib,

                       galua-rts,

                       ghc, directory, filepath, time,
                       ghc-paths

  if os(linux)
    build-depends:     process,
                       unix,
                       elf,
                       dwarf-tools

  hs-source-dirs:      src

  c-sources:           cbits/lua_capi.c
  includes:            lprefix.h
                       luaconf.h
                       lua.h


  -- cpp for Haskell CPP, cc for c sources
  if os(linux)
    cc-options:        -DLUA_USE_LINUX
    cpp-options:       -DLUA_USE_LINUX
  if os(darwin)
    cc-options:        -DLUA_USE_MACOSX
    cpp-options:       -DLUA_USE_MACOSX

  if flag(dump-core)
    build-depends: dump-core
    ghc-options: -fplugin=DumpCore -fplugin-opt DumpCore:core-html


  include-dirs:        include
  install-includes:    lprefix.h
                       luaconf.h
                       lua.h


  cc-options:          -std=c99 -g
  default-language:    Haskell2010

