Name:          macho
Version:       0.23
License:       BSD3
License-file:  LICENSE
Category:      Data
Author:        Erik Charlebois
Copyright:     Erik Charlebois
Maintainer:    Erik Charlebois <erikcharlebois@gmail.com>
Stability:     unstable
Cabal-Version: >= 1.10
Homepage:      http://github.com/erikcharlebois/macho
Build-Type:    Custom
Synopsis:      Parser for Mach-O object format.
Description:   Parser for Mach-O object format.

source-repository head
  type:     git
  location: http://github.com/erikcharlebois/macho.git

library
    build-depends:   base >= 4 && < 5, bytestring, binary
    hs-source-dirs:  src
    exposed-modules: Data.Macho
    default-language: Haskell2010

executable mytest
    build-depends: bytestring, base, macho, dwarf-tools, containers
    main-is: Main.hs
    default-language: Haskell2010
